# vp-integration-tests

./: .gitignore  CMakeLists.txt  README.md  test.sh
gdb/: CMakeLists.txt  test.sh
gdb/connect-and-quit/: output  post-process.sh  postcheck.sh
gdb/hit-breakpoint/: gdb-cmds  hit-breakpoint.S  output
gdb/mc-deterministic/: CMakeLists.txt  gdb-cmds  mc-deterministic.S  output
gdb/mc-info-threads/: output
gdb/mc-wfi-thread/: output
gdb/read-registers/: gdb-cmds  output  read-registers.S
gdb/remove-breakpoint/: gdb-cmds  output
gdb/single-step/: CMakeLists.txt  gdb-cmds  output  post-process.sh  single-step.S
integration/: test.sh
integration/mc-basic/: main.c
integration/printf/: opts
integration/sys-read/: opts
libgdb/: CMakeLists.txt  parser1.c  parser2.c  parser_util.c  suite.h  test.c  test.sh  util.c  util.h
sw/: CMakeLists.txt  run_tests.sh  test.sh
sw/basic-asm/: CMakeLists.txt  output  post-process.sh  sum.S
sw/basic-c/: CMakeLists.txt  bootstrap.S  main.c  output  post-process.sh
sw/mc-basic/: CMakeLists.txt  output
toolchain/: clang.cmake  gcc.cmake  rv32.cmake  rv64.cmake
